[gd_scene load_steps=11 format=2]

[ext_resource path="res://Tilesets/BaseRoomTileset.tres" type="TileSet" id=1]
[ext_resource path="res://Entities/SceneTranistion/SceneTransition.tscn" type="PackedScene" id=2]
[ext_resource path="res://Rooms/ServantsRoom/ServantsRoom.gd" type="Script" id=3]
[ext_resource path="res://Interface/CanvasLayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Characters/Servant/Servant.tscn" type="PackedScene" id=5]
[ext_resource path="res://CutsceneTriggers/CutsceneTriggger.tscn" type="PackedScene" id=6]
[ext_resource path="res://Objects/DevilsCard/CardPiece.tscn" type="PackedScene" id=7]
[ext_resource path="res://Tilesets/main_tileset.tres" type="TileSet" id=8]
[ext_resource path="res://Objects/DevilsCard/DevilCardBottomLeft.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]
resource_name = "the_servant"
tracks/0/type = "value"
tracks/0/path = NodePath("Servant:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="ServantsRoom" type="Node2D"]
script = ExtResource( 3 )
room_tilemap = NodePath("TileMap")

[node name="CanvasLayer" parent="." instance=ExtResource( 4 )]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.117647, 0.117647, 0.117647, 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( -327684, 15, 0, -327683, 15, 0, -327682, 15, 0, -327681, 15, 0, -393216, 15, 0, -393215, 15, 0, -393214, 15, 0, -393213, 15, 0, -393212, 15, 0, -393211, 15, 0, -393210, 15, 0, -393209, 15, 0, -393208, 15, 0, -393207, 15, 0, -393206, 15, 0, -393205, 15, 0, -393204, 15, 0, -393203, 15, 0, -262148, 15, 0, -262147, 15, 0, -262146, 15, 0, -262145, 15, 0, -327680, 15, 0, -327679, 15, 0, -327678, 15, 0, -327677, 15, 0, -327676, 15, 0, -327675, 15, 0, -327674, 15, 0, -327673, 15, 0, -327672, 15, 0, -327671, 15, 0, -327670, 15, 0, -327669, 15, 0, -327668, 15, 0, -327667, 15, 0, -196612, 15, 0, -196611, 15, 0, -196610, 15, 0, -196609, 15, 0, -262144, 15, 0, -262143, 15, 0, -262142, 15, 0, -262141, 15, 0, -262140, 15, 0, -262139, 15, 0, -262138, 15, 0, -262137, 15, 0, -262136, 15, 0, -262135, 15, 0, -262134, 15, 0, -262133, 15, 0, -262132, 15, 0, -262131, 15, 0, -131076, 15, 0, -131075, 15, 0, -131074, 15, 0, -131073, 15, 0, -196608, 15, 0, -196607, 15, 0, -196606, 15, 0, -196605, 15, 0, -196604, 15, 0, -196603, 15, 0, -196602, 15, 0, -196601, 15, 0, -196600, 15, 0, -196599, 15, 0, -196598, 15, 0, -196597, 15, 0, -196596, 15, 0, -196595, 15, 0, -65540, 15, 0, -65539, 15, 0, -65538, 15, 0, -65537, 15, 0, -131072, 6, 0, -131071, 5, 0, -131070, 4, 65536, -131069, 6, 0, -131068, 6, 0, -131067, 6, 0, -131066, 6, 0, -131065, 4, 65536, -131064, 5, 0, -131063, 6, 0, -131062, 15, 0, -131061, 15, 0, -131060, 15, 0, -131059, 15, 0, -4, 15, 0, -3, 15, 0, -2, 15, 0, -1, 15, 0, -65536, 7, 0, -65535, 7, 0, -65534, 7, 0, -65533, 7, 0, -65532, 7, 0, -65531, 7, 0, -65530, 7, 0, -65529, 7, 0, -65528, 7, 0, -65527, 7, 0, -65526, 15, 0, -65525, 15, 0, -65524, 15, 0, -65523, 15, 0, 65532, 15, 0, 65533, 15, 0, 65534, 15, 0, 65535, 15, 0, 0, 11, 2, 1, 11, 2, 2, 11, 2, 3, 11, 2, 4, 11, 2, 5, 11, 2, 6, 11, 2, 7, 11, 2, 8, 11, 2, 9, 11, 2, 10, 15, 0, 11, 15, 0, 12, 15, 0, 13, 15, 0, 131068, 15, 0, 131069, 15, 0, 131070, 15, 0, 131071, 15, 0, 65536, 11, 2, 65537, 11, 2, 65538, 11, 2, 65539, 11, 2, 65540, 11, 2, 65541, 11, 2, 65542, 11, 2, 65543, 11, 1, 65544, 14, 0, 65545, 11, 2, 65546, 15, 0, 65547, 15, 0, 65548, 15, 0, 65549, 15, 0, 196604, 15, 0, 196605, 15, 0, 196606, 15, 0, 196607, 15, 0, 131072, 11, 2, 131073, 11, 2, 131074, 11, 2, 131075, 11, 2, 131076, 11, 2, 131077, 11, 2, 131078, 11, 2, 131079, 11, 2, 131080, 11, 2, 131081, 11, 2, 131082, 15, 0, 131083, 15, 0, 131084, 15, 0, 131085, 15, 0, 262138, 15, 0, 262139, 15, 0, 262140, 15, 0, 262141, 15, 0, 262142, 15, 0, 262143, 15, 0, 196608, 11, 2, 196609, 11, 2, 196610, 11, 2, 196611, 11, 2, 196612, 11, 2, 196613, 10, 65536, 196614, 11, 2, 196615, 11, 2, 196616, 11, 2, 196617, 11, 2, 196618, 15, 0, 196619, 15, 0, 196620, 15, 0, 196621, 15, 0, 327674, 15, 0, 327675, 15, 0, 327676, 15, 0, 327677, 15, 0, 327678, 15, 0, 327679, 15, 0, 262144, 11, 2, 262145, 11, 2, 262146, 11, 2, 262147, 11, 2, 262148, 11, 2, 262149, 11, 2, 262150, 11, 2, 262151, 11, 2, 262152, 11, 2, 262153, 11, 2, 262154, 15, 0, 262155, 15, 0, 262156, 15, 0, 262157, 15, 0, 393210, 15, 0, 393211, 15, 0, 393212, 15, 0, 393213, 15, 0, 393214, 15, 0, 393215, 15, 0, 327680, 11, 2, 327681, 11, 2, 327682, 11, 2, 327683, 11, 2, 327684, 11, 2, 327685, 11, 2, 327686, 11, 2, 327687, 11, 2, 327688, 11, 2, 327689, 11, 2, 327690, 15, 0, 327691, 15, 0, 327692, 15, 0, 327693, 15, 0, 458748, 15, 0, 458749, 15, 0, 458750, 15, 0, 458751, 15, 0, 393216, 11, 2, 393217, 11, 2, 393218, 11, 2, 393219, 11, 2, 393220, 10, 0, 393221, 11, 2, 393222, 11, 2, 393223, 11, 2, 393224, 11, 2, 393225, 11, 2, 393226, 15, 0, 393227, 15, 0, 393228, 15, 0, 393229, 15, 0, 524284, 15, 0, 524285, 15, 0, 524286, 15, 0, 524287, 15, 0, 458752, 15, 0, 458753, 15, 0, 458754, 15, 0, 458755, 15, 0, 458756, 11, 2, 458757, 15, 0, 458758, 15, 0, 458759, 15, 0, 458760, 15, 0, 458761, 15, 0, 458762, 15, 0, 458763, 15, 0, 458764, 15, 0, 458765, 15, 0, 589820, 15, 0, 589821, 15, 0, 589822, 15, 0, 589823, 15, 0, 524288, 15, 0, 524289, 15, 0, 524290, 15, 0, 524291, 15, 0, 524292, 15, 0, 524293, 15, 0, 524294, 15, 0, 524295, 15, 0, 524296, 15, 0, 524297, 15, 0, 524298, 15, 0, 524299, 15, 0, 524300, 15, 0, 524301, 15, 0, 655356, 15, 0, 655357, 15, 0, 655358, 15, 0, 655359, 15, 0, 589824, 15, 0, 589825, 15, 0, 589826, 15, 0, 589827, 15, 0, 589828, 15, 0, 589829, 15, 0, 589830, 15, 0, 589831, 15, 0, 589832, 15, 0, 589833, 15, 0, 589834, 15, 0, 589835, 15, 0, 589836, 15, 0, 589837, 15, 0 )

[node name="Borders" type="TileMap" parent="."]
tile_set = ExtResource( 8 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -262145, 0, 4, -327680, 0, 1, -327679, 0, 1, -327678, 0, 1, -327677, 0, 1, -327676, 0, 1, -327675, 0, 1, -327674, 0, 1, -327673, 0, 1, -327672, 0, 1, -327671, 0, 1, -327670, 0, 1, -327669, 0, 1, -327668, 0, 1, -327667, 0, 1, -327666, 0, 1, -327665, 0, 1, -327664, 0, 1, -327663, 0, 1, -327662, 0, 1, -327661, 0, 1, -327660, 0, 5, -196609, 0, 65539, -262124, 0, 65539, -131073, 0, 65539, -196588, 0, 65539, -65537, 0, 65539, -131052, 0, 65539, -1, 0, 65539, -65516, 0, 65539, 65535, 0, 65539, 20, 0, 65539, 131071, 0, 65539, 65556, 0, 65539, 196607, 0, 65539, 131092, 0, 65539, 262143, 0, 65539, 196628, 0, 65539, 327679, 0, 65539, 262164, 0, 65539, 393215, 0, 65539, 327700, 0, 65539, 458751, 0, 65539, 393236, 0, 65539, 524287, 0, 65539, 458772, 0, 65539, 589823, 0, 65539, 524308, 0, 65539, 655359, 0, 65539, 589844, 0, 65539, 720895, 0, 65539, 655380, 0, 65539, 786431, 0, 65539, 720916, 0, 65539, 851967, 0, 65539, 786452, 0, 65539, 917503, 0, 65539, 851988, 0, 65539, 983039, 0, 65540, 917504, 0, 1, 917505, 0, 1, 917506, 0, 1, 917507, 0, 1, 917508, 0, 1, 917509, 0, 1, 917510, 0, 1, 917511, 0, 65538, 917514, 0, 65536, 917515, 0, 1, 917516, 0, 1, 917517, 0, 1, 917518, 0, 1, 917519, 0, 1, 917520, 0, 1, 917521, 0, 1, 917522, 0, 1, 917523, 0, 1, 917524, 0, 196610, 983047, 0, 65539, 983050, 0, 65539, 1048583, 0, 65539, 1048586, 0, 65539, 1114119, 0, 131075, 1114122, 0, 131075 )

[node name="SaoirseSpawnPoint" type="Position2D" parent="."]
position = Vector2( 288.113, 413.518 )

[node name="Exit" parent="." instance=ExtResource( 2 )]
position = Vector2( 287.94, 481.343 )
scale = Vector2( 3.37675, 2.57944 )
scene_to = 2

[node name="Servant" parent="." instance=ExtResource( 5 )]
position = Vector2( 296, 24.6047 )

[node name="CardPiece" parent="." instance=ExtResource( 7 )]
position = Vector2( 296, 96 )
card_piece_name = "BottomLeft"
card_piece_texture = ExtResource( 9 )

[node name="Tween" type="Tween" parent="."]

[node name="CutsceneTriggger" parent="." instance=ExtResource( 6 )]
position = Vector2( 320, 304 )
scale = Vector2( 30.68, 1.09571 )
cutscene_animation_name = "the_servant"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/the_servant = SubResource( 1 )
